--- a/how-to/modules/ROOT/pages/index.adoc
+++ b/how-to/modules/ROOT/pages/index.adoc
@@ -6,6 +6,6 @@ are outside the immediate scope of what SDP aims to accomplish. We've
 collected some of that knowledge here:
 
 
-link:https://help.github.com/articles/creating-a-new-organization-from-scratch/[Create a GitHub Organization]
-link:https://www.twistlock.com/2018/05/08/[Deploy Twistlock to OpenShift]
-link:Unit-Testing-SDP/index.adoc[securing-containers-red-hat-openshift-twistlock-deployment-script]
+link:https://help.github.com/articles/creating-a-new-organization-from-scratch/[Create a GitHub Organization] +
+link:https://www.twistlock.com/2018/05/08/[Deploy Twistlock to OpenShift] +
+link:Unit-Testing-SDP/index.adoc[securing-containers-red-hat-openshift-twistlock-deployment-script] +
